--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -2,23 +2,13 @@
   /* Screens */
   --breakpoint-3xl: 120rem; /* 1920px */
 
-  /* Spacing */
-  --spacing-4_5: 1.125rem; /* 18px */
-  --spacing-5_5: 1.375rem; /* 22px */
-  --spacing-6_5: 1.625rem; /* 26px */
-  --spacing-7_5: 1.875rem; /* 30px */
-  --spacing-8_5: 2.125rem; /* 34px */
-  --spacing-9_5: 2.375rem; /* 38px */
+  --font-sans:
+    'AspektaVF', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; /* Sans VF family */
+  --font-sans--font-variation-settings: 'wght' 400; /* Sans VF weight */
 
-  /* Type System */
-  --font-family-sans: 'AspektaVF', ui-sans-serif, system-ui, sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; /* Sans VF family */
-  --font-family-sans--font-variation-settings: 'wght' 400; /* Sans VF weight */
-  --font-size-3xs: 0.5rem; /* 8px */
-  --font-size-3xs--line-height: 0.75rem; /* 12px */
-  --font-size-2xs: 0.625rem; /* 10px */
-  --font-size-2xs--line-height: 0.875rem; /* 14px */
-
-  /* Widths */
-  --width-8xl: 90rem, /* 1440px */;
+  --text-3xs: 0.5rem; /* 8px */
+  --text-3xs--line-height: calc(0.75 / 0.5); /* 1.5 */
+  --text-2xs: 0.625rem; /* 10px */
+  --text-2xs--line-height: calc(0.875 / 0.625); /* 1.4 */
 }
